[package]
name = "git-loc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
chrono = "0.4"
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
tempfile = "3"
tokei = { version = "13", default-features = false }
